tests/syntax_error/assign_to_assignment.jou
def foo() -> void:
    (x = y) = 7  # Error: cannot assign to an assignment
